enhanced reservation email and organized imports

--- a/etc/email_templates/reservation_confirmation.html
+++ b/etc/email_templates/reservation_confirmation.html
@@ -1,5 +1,5 @@
 <p>Reservation #$trip.reservationId</p>
 
-<p>Congratulations! Your reservation for <b>$trip.name</b> on <b>trip.date</b> is confirmed.</p>
+<p>Congratulations! Your reservation for <b>$trip.name</b> on <b>$trip.date</b> is confirmed.</p>
 
 <p>Thank you for being a ROAMY!</p>
