--- a/etc/email_templates/booking_confirmation.htm
+++ b/etc/email_templates/booking_confirmation.htm
@@ -224,14 +224,14 @@
     <div style="font-size: 15px;line-height: 15px;mso-line-height-rule: exactly;">&nbsp;</div>
 
     <table class="layout layout--no-gutter"
-           style="border-collapse: collapse;table-layout: fixed;Margin-left: auto;Margin-right: auto;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #307fb0;background-position: 0px 0px;background-image: url(#$trip.coverPicture);background-repeat: repeat;"
+           style="border-collapse: collapse;table-layout: fixed;Margin-left: auto;Margin-right: auto;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #307fb0;background-position: 0px 0px;background-image: url($trip.coverPicture);background-repeat: repeat;"
            align="center">
         <tbody>
         <tr>
             <td class="column"
                 style="padding: 0;text-align: left;vertical-align: top;color: #60666d;font-size: 14px;line-height: 21px;font-family: Open Sans,sans-serif;width: 600px;">
 
-                <div style="line-height:68px;">&nbsp;</div>
+                <div style="line-height:100px;">&nbsp;</div>
 
                 <div style="Margin-left: 20px;Margin-right: 20px;">
                     <h1 class="size-40"
@@ -242,7 +242,7 @@
                         <span style="color:#ffffff">&nbsp;</span></p>
                 </div>
 
-                <div style="line-height:48px;">&nbsp;</div>
+                <div style="line-height:60px;">&nbsp;</div>
 
             </td>
         </tr>
