--- a/etc/email_templates/booking_confirmation.htm
+++ b/etc/email_templates/booking_confirmation.htm
@@ -231,19 +231,7 @@
             <td class="column"
                 style="padding: 0;text-align: left;vertical-align: top;color: #60666d;font-size: 14px;line-height: 21px;font-family: Open Sans,sans-serif;width: 600px;">
 
-                <div style="line-height:100px;">&nbsp;</div>
-
-                <div style="Margin-left: 20px;Margin-right: 20px;">
-                    <h1 class="size-40"
-                        style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #44a8c7;font-size: 40px;line-height: 47px;font-family: Cabin,Avenir,sans-serif;text-align: center;">
-                        <strong><span style="color:#ffffff">&nbsp;</span></strong></h1>
-                    <p class="size-20"
-                       style="Margin-top: 20px;Margin-bottom: 20px;font-size: 20px;line-height: 28px;text-align: center;">
-                        <span style="color:#ffffff">&nbsp;</span></p>
-                </div>
-
-                <div style="line-height:60px;">&nbsp;</div>
-
+                <img style="display: block;border: 0;" src="$trip.coverPicture" alt="$trip.name Cover Pic" width="600" height="300"/>
             </td>
         </tr>
         </tbody>
@@ -310,7 +298,7 @@
                     <div style="Margin-top: 2px;Margin-bottom: 0;">
                         <table>
                             <tr>
-                                <td style="text-align: left;width: 540px;">
+                                <td style="text-align: left;width: 500px;">
                                     <strong>$option.type</strong>
                                     <span style="font-size: 12px;">
                                         #if( $option.count != "")
@@ -318,7 +306,7 @@
                                         #end
                                     </span>
                                 </td>
-                                <td style="text-align: right;width: 60px;">$option.totalCost</td>
+                                <td style="text-align: right;width: 100px;">$option.totalCost</td>
                             </tr>
                         </table>
                     </div>
@@ -326,8 +314,8 @@
                     <div style="Margin-top: 2px;Margin-bottom: 0;border-top: 2px solid #bfc1c4;">
                         <table>
                             <tr>
-                                <td style="text-align: left;width: 540px;"><strong>Total Cost</strong> </td>
-                                <td style="text-align: right;width: 60px;">$trip.totalCost</td>
+                                <td style="text-align: left;width: 500px;"><strong>Total Cost</strong> </td>
+                                <td style="text-align: right;width: 100px;">$trip.totalCost</td>
                             </tr>
                         </table>
                     </div>
